removed bug that prevented overflow from showing on mobile card container

--- a/src/components/CreateCard/CreateCard.scss
+++ b/src/components/CreateCard/CreateCard.scss
@@ -22,7 +22,5 @@
         top: 5%;
         width: 90%;
         height: 90%;
-        overflow: hidden;
-        -webkit-overflow-scrolling: touch;
     }
 }
